Add manageable seeded video categories
